--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -201,7 +201,7 @@
     </div>
 
     <!-- Info/Alert Modal -->
-    <div class="modal fade" id="infoModal" tabindex="-1" aria-hidden="true">
+    <div class="modal fade" id="infoModal" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content border-0 shadow">
                 <div class="modal-body p-4 text-center">
